---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
unconstrained fn return_array(val: Field) -> [Field; 1] {
    [val; 1]
}

fn main(val: Field) {
    // Safety: comment added by `nargo expand`
    unsafe {
        let array: [Field; 1] = return_array(val);
        assert_constant(array.as_slice().len());
    }
}
